# halo

./: README.md
HALO-Act/: .gitignore  .gitmodules  README.md  setup.py
HALO-Act/configs/: medgemma.yaml
HALO-Act/eval/: eval_libero.py
HALO-Act/libs/RoboVerse/: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  setup.py
HALO-Act/logs/: parse_libero_results.py
HALO-Act/rv_train/: configs.py  constants.py  model_specs.py  train.py
HALO-Act/rv_train/deploy/: data_models.py  model_manager.py  sample_client.py  service.py
HALO-Act/rv_train/models/: __init__.py
HALO-OR/: .gitignore
HALO-OR/docs/: RUN_INSTRUCTIONS.md
HALO-OR/scripts/: RUN_COMMANDS.sh  RUN_COMMANDS_WITH_HF_TOKEN.sh
HALO-OR/surgical_tool_pipeline/: __init__.py  api.py  audio.py  bboxsi_main.py  classifier.py  pipeline.py  robot.py
HALO-RX/: .gitignore  README.md  pyproject.toml  run_halo_rx.sh
HALO-RX/backend/: README.md  __init__.py  bounder.py  center.py  common.py  cropper.py  infer_core.py  labeler.py  labels.json  meds.txt  models.py  pipeline.py  pipeline_helpers.py  prescriber.py  requirements.txt  utils.py
HALO-RX/backend/boundingbox/: __init__.py  crop_bboxes.py  main.py
HALO-RX/backend/inference/models/: config.json
HALO-RX/backend/inference/processor/: preprocessor_config.json  tokenizer_config.json
HALO-RX/frontend/: README.md  app.py  extract_table_to_csv.py
HALO-RX/scripts/: run.sh
haloOR/: README.md  requirements-combined.txt
haloOR/docs/: model_build.md
haloOR/surgical_tool_pipeline/: cli.py  config.py  detector.py  helpers.py  medsiglip_infer.py
(+32 files in other folders)
