[project]
name = "halo-rx"
version = "0.1.0"
description = "HALO-RX standalone repository"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.26,<2.0",
  "opencv-python-headless>=4.10.0.84",
  "pytesseract>=0.3.10",
  "pandas>=2.2.0",
  "streamlit>=1.41.0",
  "joblib>=1.4.2,<2.0",
  "pyyaml>=6.0.2,<7.0",
  "tqdm>=4.67,<5.0",
  "scikit-learn>=1.6,<2.0",
  "torch>=2.1,<2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "torch>=2.5,<2.6; sys_platform != 'darwin'",
  "torch>=2.5,<2.6; sys_platform == 'darwin' and platform_machine != 'x86_64'",
  "torchvision>=0.16,<0.17; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "torchvision>=0.20,<0.21; sys_platform != 'darwin'",
  "torchvision>=0.20,<0.21; sys_platform == 'darwin' and platform_machine != 'x86_64'",
  "transformers>=4.38,<4.39",
  "accelerate>=0.27,<0.28",
  "peft>=0.10,<0.11",
  "sentencepiece>=0.2.0,<0.3",
  "protobuf>=5.29.3,<6.0",
  "safetensors>=0.5.2,<0.8",
]

[tool.uv]
package = false

